<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <TextView
        android:id="@+id/titleSecond"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:text="@string/title"
        android:textAlignment="viewStart"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/firstPartyTextView"
        android:layout_width="189dp"
        android:layout_height="42dp"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:text="@string/first_party"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/firstPartyNumberOfVotes"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="216dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_zero"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/secondPartyTextView"
        android:layout_width="189dp"
        android:layout_height="42dp"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:text="@string/second_party"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/secondPartyNumberOfVotes"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="216dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_zero"
        android:textAlignment="center"
        android:textSize="20sp"
        tools:text="0" />

    <TextView
        android:id="@+id/thirdPartyTextView"
        android:layout_width="189dp"
        android:layout_height="42dp"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="125dp"
        android:ems="10"
        android:text="@string/third_party"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/thirdPartyNumberOfVotes"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="216dp"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_zero"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/fourthPartyTextView"
        android:layout_width="189dp"
        android:layout_height="42dp"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="175dp"
        android:ems="10"
        android:text="@string/fourth_party"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fourthPartyNumberOfVotes"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="216dp"
        android:layout_marginTop="163dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_zero"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/fifthPartyTextView"
        android:layout_width="189dp"
        android:layout_height="42dp"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="225dp"
        android:ems="10"
        android:text="@string/fifth_party"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fifthPartyNumberOfVotes"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="216dp"
        android:layout_marginTop="214dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/_zero"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/sixthPartyTextView"
        android:layout_width="189dp"
        android:layout_height="42dp"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="275dp"
        android:ems="10"
        android:text="@string/sixth_party"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/sixthPartyNumberOfVotes"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="215dp"
        android:layout_marginTop="267dp"
        android:ems="10"
        android:inputType="number"
        android:text="0"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="319dp"
        android:layout_marginEnd="3dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/mandats_button"
        android:textColor="@android:color/background_light"
        android:textStyle="bold" />

</RelativeLayout>