<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourthActivity">

    <TextView
        android:id="@+id/titleSecond"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:text="@string/title"
        android:textAlignment="viewStart"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/firstPartyTextView"
        android:layout_width="189dp"
        android:layout_height="42dp"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:text="@string/first_party"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/numberOfMandatsFirst"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="220dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:text="@string/zero"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/secondPartyTextView"
        android:layout_width="189dp"
        android:layout_height="42dp"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:text="@string/second_party"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/numberOfMandatsSecond"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="220dp"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:text="@string/zero"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/thirdPartyTextView"
        android:layout_width="189dp"
        android:layout_height="42dp"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="125dp"
        android:ems="10"
        android:text="@string/third_party"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/numberOfMandatsThird"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="220dp"
        android:layout_marginTop="125dp"
        android:ems="10"
        android:text="@string/zero"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fourthPartyTextView"
        android:layout_width="189dp"
        android:layout_height="42dp"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="175dp"
        android:ems="10"
        android:text="@string/fourth_party"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/numberOfMandatsFourth"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="220dp"
        android:layout_marginTop="175dp"
        android:ems="10"
        android:text="@string/zero"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fifthPartyTextView"
        android:layout_width="189dp"
        android:layout_height="42dp"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="225dp"
        android:ems="10"
        android:text="@string/fifth_party"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/numberOfMandatsFifth"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="220dp"
        android:layout_marginTop="225dp"
        android:ems="10"
        android:text="@string/zero"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sixthPartyTextView"
        android:layout_width="189dp"
        android:layout_height="42dp"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="275dp"
        android:ems="10"
        android:text="@string/sixth_party"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/numberOfMandatsSixth"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_below="@+id/titleSecond"
        android:layout_alignParentStart="true"
        android:layout_marginStart="220dp"
        android:layout_marginTop="275dp"
        android:ems="10"
        android:text="@string/zero"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold" />



</RelativeLayout>